--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         }
 
         var locker = new GestureUnlocker({
-           
+            circleColor: 'green',
+            successColor: 'yellow',
             containner: ".canvas-container",
             className: 'unlocker',
             callback: function (data) {
