fix bug in laji UC broswer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .unlocker {
             display: block;
             width: 100%;
-            padding: 0px 20px;
+            padding: 0px 10px;
             box-sizing: border-box;
         }
     </style>
@@ -76,6 +76,7 @@
 
         var temp;
         var locker = new GestureUnlocker({
+            sideLength: 300,
             circleColor: '#353031',
             lineColor: 'rgb(255,165,0)',
             successColor: '#289c4a',
