add unlock mode

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             }, false);
         })();
 
-        // 回调函数
+        // 回调函数，处理逻辑
         var callback = (function () {
             var temp;
 
@@ -136,7 +136,7 @@
             errorColor: 'red',              // 解锁错误时圆边颜色
             containner: ".canvas-container",// canvas容器选择器
             className: 'unlocker',          // class名称,canvas元素样式定义
-            mode: 'easy',
+            mode: 'simple',
             callback: callback              // 滑动结束后的回调函数
         });
     </script>
