fix bug : code repeat in simple mode

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             var temp;
 
             return function (data) {
+                console.log(data);
                 var p = document.getElementById('info'),
                     password = window.localStorage.getItem('password');
 
